# mimipoint-api-revamp

./: .gitignore  Dockerfile  FIREBASE_SETUP.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0237ea40f03b_updated_the_user_and_notification_model.py  32137b997477_updated_the_user_and_notification_model.py  36e31c961192_table_recreate.py  37b44b27fd99_table_recreate.py  5dcb67f479e0_table_recreate.py  5f1bd2a54792_update_product_category.py  7b7e47a86d2c_table_recreate.py  8448c46f45c5_added_product_review.py  daabdccb13d9_table_recreate.py  e6400546722d_updated_the_user_and_notification_model.py
app/: main.py
app/api/v1/auth/: dependencies.py  errors.py  models.py  utils.py
app/api/v1/auth/routes/: oauth_routes.py  routes.py  two_factor_routes.py  user_routes.py
app/api/v1/auth/schemas/: schemas.py
app/api/v1/auth/services/: service.py  token_service.py
app/api/v1/complaints/: models.py  routes.py  schemas.py  service.py
app/api/v1/easybuy/: models.py  routes.py  schemas.py  service.py
app/api/v1/files/: routes.py  utils.py
app/api/v1/notifications/: models.py  routes.py  schemas.py  service.py
app/api/v1/transactions/: Paystack.py  models.py  routes.py  schemas.py  service.py
app/core/: config.py  firebase.py  mail.py  middleware.py  routes.py
